starting on cart sessions

--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -15,7 +15,7 @@
             <li><hr></li>
             {{/each}}
             <li><hr></li>
-            <li><a href="/">Checkout</a></li>
+            <li><a href="/cart">Checkout</a></li>
           </ul>
         </li>
         <li><a href="/">Logout</a></li>
