carts are saved in sessions and contents display properly

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -23,7 +23,7 @@
 		{{/each}}
 		<div class="row">
 			<div class="col-xs-4 col-md-3">
-				<h3>Total: ${{product.sum}}.00</h3>
+				<h3>Total: ${{sum}}.00</h3>
 			</div>
 			<div class="col-xs-4 col-md-3 col-md-offset-3">
 				<button class="btn btn-danger">Clear Cart</button>
