--- a/views/cart/show.handlebars
+++ b/views/cart/show.handlebars
@@ -1,18 +1,65 @@
-<header class="page-header">
-  <h1>Cart</h1>
-</header>
-{{cart}}
 <div class="panel panel-primary">
+  <div class='panel-heading'>Cart</div>
+  {{#each cart as |item|}}
   <div class="panel-body">
-    {{#each cart as |item|}}
-    <div class="col-xs-12">
-      {{item.name}}
+    <div class='col-xs-3'>
+      {{item.img}}
     </div>
-    {{/each}}
-    <!--checkout section-->
-    <div class="col-xs-12">
-      <p>Total:$1000</p>
-      <button>Clear Cart</button> 
-      <button type='submit'>Checkout</button>
+    <div class='col-xs-3'>
+      {{item.name}}
+      {{item.price}}
+    </div>
+    <!-- <div class='col-xs-3'>
+      {{item.quantity}}
+    </div> -->
+    <div class='col-xs-6'>
+      <!--buttons-->
+      <form>
+        <label for=''>
+        <input type='text' value={{item.quantity}} name='quantity'>
+        <label for=''>
+        <button type='submit' class='btn btn-info'>Set Quantity</button>
+        <label for=''>
+        <button type='submit' class='btn btn-danger'>Remove</button>
+      </form>
     </div>
   </div>
+  {{/each}}
+  <div class='panel-footer'>
+    <!--checkout section-->
+    <p>Total:$1000</p>
+    <form method='GET' action='./../cart?delete'>
+      <button type='submit' class="btn btn-primary" value={{product.id}} name='addItem'>Clear Cart</button>
+    </form>
+    <form method='POST' action='./../cart/add'>
+      <button type='submit'>Checkout</button>
+    </form>
+  </div>
+
+</div>
+  <!--
+    <div class="col-xs-12">
+      <p>Total:$1000</p>
+      <form method='GET' action='./../cart?delete'>
+        <button type='submit' class="btn btn-primary" value={{product.id}} name='addItem'>Clear Cart</button>
+      </form>
+      <form method='POST' action='./../cart/add'>
+        <button type='submit'>Checkout</button>
+      </form>
+    </div>
+  </div> -->
+  <!-- <div class="panel panel-default">
+    <div class="panel-heading">Panel heading without title</div>
+    <div class="panel-body">
+      Panel content
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Panel title</h3>
+    </div>
+    <div class="panel-body">
+      Panel content
+    </div>
+  </div> -->
