--- a/views/partials/navbar.handlebars
+++ b/views/partials/navbar.handlebars
@@ -9,10 +9,11 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-shopping-cart"></span></a>
           <ul class="dropdown-menu">
             <!-- put cart items here later -->
-            {{#each products as |p|}}
-            <li>> {{p.name}}</li>
-            <li>${{p.price}}</li>
-            <li><hr></li>
+            {{#each cart as |item|}}
+              <li>> {{item.name}}</li>
+              <li>${{item.price}} per item</li>
+              <li>Quantity: {{item.quantity}}</li>
+              <li><hr></li>
             {{/each}}
             <li><hr></li>
             <li><a href="/cart">Checkout</a></li>
