--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -40,13 +40,15 @@
   </div>
   <div class="panel-body">
     {{#each products as |product|}}
-    <div class="col-xs-4">
-      <img src='./{{product.img}}' class='smallImg'>
-      <h3>${{product.price}}</h3>
-      <h3><a href="/products/show/{{product.id}}">{{product.name}}</a></h3>
-      <h5>{{product.description}}</h5>
-      <button class="btn btn-primary">Add to Cart</button>
-    </div>
+    <form method='POST' action='./../cart/add'>
+      <div class="col-xs-4">
+        <img src='./{{product.img}}' class='smallImg'>
+        <h3>${{product.price}}</h3>
+        <h3><a href="/products/show/{{product.id}}">{{product.name}}</a></h3>
+        <h5>{{product.description}}</h5>
+        <button type='submit' class="btn btn-primary" value={{product.id}} name='addItem'>Add to Cart</button>
+      </div>
+    </form>
     {{/each}}
   </div>
 
