--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -22,15 +22,21 @@
 			</div>
 		{{/each}}
 		<div class="row">
-			<div class="col-xs-4 col-md-3">
-				<h3>Total: ${{sum}}.00</h3>
-			</div>
-			<div class="col-xs-4 col-md-3 col-md-offset-3">
-				<button class="btn btn-danger">Clear Cart</button>
-			</div>
-			<div class="col-xs-4 col-md-3">
-				<button class="btn btn-primary">Checkout</button>
-			</div>
+			{{#if products.length}}
+				<div class="col-xs-4 col-md-3">
+					<h3>Total: ${{sum}}.00</h3>
+				</div>
+				<div class="col-xs-4 col-md-3 col-md-offset-3">
+					<button class="btn btn-danger">Clear Cart</button>
+				</div>
+				<div class="col-xs-4 col-md-3">
+					<button class="btn btn-primary">Checkout</button>
+				</div>
+			{{else}}
+				<div class="col-md-8 col-md-offset-2">
+					<h3>There are no items in your cart.</h3>
+				</div>
+			{{/if}}
 		</div>
 	</div>
 </div>
