refactor min/max

--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -50,5 +50,5 @@
   {{#each products as |product| }} {{> shared/_product product=product }} {{/each }}
 </section>
 {{else }}
-<p class="text-danger">No products</p>
+<p class="text-danger">No products match that filter. Try again.</p>
 {{/if }}
