--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -19,7 +19,7 @@
 				<div class="col-xs-6 col-sm-3">
 						<button class="btn btn-success">Set Quantity</button>
 					</form>
-					<form action="" method="post">
+					<form action="/cart/{{product.id}}/remove" method="post">
 						<button class="btn btn-danger">Remove</button>
 					</form>
 				</div>
