--- a/views/categories/single.handlebars
+++ b/views/categories/single.handlebars
@@ -5,25 +5,6 @@
 
 {{#if category.Products}}
 <h2>Products</h2>
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Price</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    {{#each category.Products as |product| }}
-    <tr>
-      <td>
-        <a href="{{ productPath product.id }}">{{ product.name }}</a>
-      </td>
-      <td>
-        <a href="{{ productPath product.id }}">{{ product.prettyPrice }}</a>
-      </td>
-      <td>
-        <a class="btn btn-primary" href="{{ addProductPath product.id }}">Add to Cart</a>
-      </td>
-    </tr>
-    {{/each }} {{/if}}
+{{#each category.Products as |product| }} {{> shared/_product product=product }} {{/each }} {{else }}
+<p class="text-danger">No products in this category. Try another.</p>
+{{/if}}
