--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -13,12 +13,22 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="main-nav-collapse">
-
+      <form action="{{ productsPath }}" class="navbar-form navbar-left">
+        <section class="form-group">
+          <input type="text" name="search" placeholder="Search..." class="form-control">
+        </section>
+        <button type="submit" class="btn btn-default">Go</button>
+      </form>
+      <ul class="nav navbar-nav">
+        <li><a href="{{ productsPath }}">Products</a></li>
+        <li><a href="{{ categoriesPath }}">Categories</a></li>
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shopping Cart <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{{ productsPath }}">Products</a></li>
+            <li role="separator" class="divider"></li>
             <li><a href="{{ categoriesPath }}">Categories</a></li>
           </ul>
         </li>
