--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -31,7 +31,9 @@
 					<h3>Total: ${{sum}}.00</h3>
 				</div>
 				<div class="col-xs-4 col-md-3 col-md-offset-3">
-					<button class="btn btn-danger">Clear Cart</button>
+					<form action="/cart/empty" method="post">
+						<button class="btn btn-danger">Clear Cart</button>
+					</form>
 				</div>
 				<div class="col-xs-4 col-md-3">
 					<button class="btn btn-primary">Checkout</button>
