--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,19 +2,14 @@
   <div class="col-xs-12">
     <h2>Products</h2>
 
-    <!--
-    <form action="/products/search" method="post">
-      <div class="form-group">
-        <input type="text" class="form-control" placeholder="search" />
-      </div>
-      <div class="form-group">
-        <input type="submit" class="btn btn-primary" />
-      </div>
-    </form>
-  -->
-
-
-      <form action ="/products/filter" method="post">
+      <form action ="/products/query" method="post">
+        <!-- Search Category -->
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="search" name="search" />
+        </div>
+        <div class="form-group">
+          <input type="submit" class="btn btn-primary" />
+        </div>
 
         <!-- Filter by Category -->
         <div class="form-group">
@@ -32,12 +27,12 @@
           <label for="category-selection">Min Price</label>
           <select name="filter[minPrice]" class="form-control">
             <option value=""></option>
-              <option value="0">0</option>
-              <option value="20">20</option>
-              <option value="40">40</option>
-              <option value="60">60</option>
-              <option value="80">80</option>
-              <option value="100">100</option>
+            <option value="0">$0.00</option>
+            <option value="20">$20.00</option>
+            <option value="40">$40.00</option>
+            <option value="60">$60.00</option>
+            <option value="80">$80.00</option>
+            <option value="100">$100.00</option>
           </select>
         </div>
 
@@ -46,12 +41,12 @@
           <label for="category-selection">Max Price</label>
           <select name="filter[maxPrice]" class="form-control">
             <option value=""></option>
-              <option value="0">0</option>
-              <option value="20">20</option>
-              <option value="40">40</option>
-              <option value="60">60</option>
-              <option value="80">80</option>
-              <option value="100">100</option>
+              <option value="0">$0.00</option>
+              <option value="20">$20.00</option>
+              <option value="40">$40.00</option>
+              <option value="60">$60.00</option>
+              <option value="80">$80.00</option>
+              <option value="100">$100.00</option>
           </select>
         </div>
 
@@ -63,7 +58,7 @@
             <option value="nameAsc">Sort by Name Ascending</option>
             <option value="nameDsc">Sort by Name Descending</option>
             <option value="priceAsc">Sort by Price Ascending</option>
-            <option value="priceDsc">Sort by Price Dscending</option>
+            <option value="priceDsc">Sort by Price Descending</option>
             <option value="newestFirst">Sort by Newest First</option>
             <option value="oldestFirst">Sort by Oldest First</option>
         </select>
@@ -77,11 +72,6 @@
 </div>
 
 <div class="row">
-  <ul>
-
-  </ul>
-
-
   {{#if products}}
   {{#each products as |product|}}
     <div class="col-xs-4">
@@ -90,9 +80,9 @@
         <h3><strong>Price: </strong>${{ product.price }}.00</h3>
         <h3><strong>Name: </strong>{{ product.name }}</h3>
         <h3><strong>Category: </strong>{{ product.Category.name }}</h3>
+        <div class="text-center cart-button"><button type="button" class="btn btn-primary">Add to Cart</button></div>
       </section>
     </div>
   {{/each}}
   {{/if}}
-
 </div>
