add/edit cart buttons update based on user cart; needs refactoring

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -83,9 +83,14 @@
 			<p>${{product.price}}.00</p>
 			<a href="/products/{{product.id}}"><p>{{product.name}}</p></a>
 			<p>{{product.Category.name}}</p>
-			<form action="/products/{{product.id}}" method="post">
-				<button class="btn btn-large btn-primary">Add to Cart</button>
-			</form>
+
+			{{#if product.inCart}}
+				<a href="/cart" class="btn btn-success">Edit in Cart</a>
+			{{else}}
+				<form action="/products/{{product.id}}" method="post">
+					<button class="btn btn-primary">Add to Cart</button>
+				</form>
+			{{/if}}
 		</div>
 	{{/each}}
 </div>
