--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -9,9 +9,13 @@
 	</div>
 	<div class="col-md-7">
 		<p>{{product.description}}</p>
-		<form action="/products/{{product.id}}" method="post">
-			<button class="btn btn-large btn-primary">Add to Cart</button>
-		</form>
+		{{#if product.inCart}}
+				<a href="/cart" class="btn btn-success">Edit in Cart</a>
+			{{else}}
+				<form action="/products/{{product.id}}" method="post">
+					<button class="btn btn-primary">Add to Cart</button>
+				</form>
+			{{/if}}
 	</div>
 </div>
 
@@ -24,9 +28,13 @@
 			<p>${{rProduct.price}}.00</p>
 			<a href="/products/{{rProduct.id}}"><p>{{rProduct.name}}</p></a>
 			<p>{{rProduct.Category.name}}</p>
-			<form action="/products/{{rProduct.id}}" method="post">
-				<button class="btn btn-large btn-primary">Add to Cart</button>
-			</form>
+			{{#if rProduct.inCart}}
+				<a href="/cart" class="btn btn-success">Edit in Cart</a>
+			{{else}}
+				<form action="/products/{{rProduct.id}}" method="post">
+					<button class="btn btn-primary">Add to Cart</button>
+				</form>
+			{{/if}}
 		</div>
 	{{/each}}
 </div>
