--- a/views/cart/show.handlebars
+++ b/views/cart/show.handlebars
@@ -3,36 +3,33 @@
   {{#each cart as |item|}}
   <div class="panel-body">
     <div class='col-xs-3'>
-      {{item.img}}
+      <img src='/{{item.img}}'class='mediumImg'>
     </div>
     <div class='col-xs-3'>
-      {{item.name}}
-      {{item.price}}
+      <p>{{item.name}}</p>
+      <p>{{item.category}}</p>
+      <p>${{item.price}}</p>
     </div>
-    <!-- <div class='col-xs-3'>
-      {{item.quantity}}
-    </div> -->
     <div class='col-xs-6'>
-      <!--buttons-->
-      <form>
-        <label for=''>
-        <input type='text' value={{item.quantity}} name='quantity'>
-        <label for=''>
-        <button type='submit' class='btn btn-info'>Set Quantity</button>
-        <label for=''>
-        <button type='submit' class='btn btn-danger'>Remove</button>
+      <form method='POST' action='/cart/{{item.id}}'>
+        <label for='quantity'></label>
+        <input id='quantity' name='quantity' type='text' value={{item.quantity}}>
+        <button id='setQuantity' type='submit' class='btn btn-info'>Set Quantity</button>
+      </form>
+      <form method='POST' action='/cart/{{item.id}}?_method=DELETE'>
+        <button id='remove' type='submit' class='btn btn-danger'>Remove</button>
       </form>
     </div>
   </div>
   {{/each}}
   <div class='panel-footer'>
     <!--checkout section-->
-    <p>Total:$1000</p>
-    <form method='GET' action='./../cart?delete'>
-      <button type='submit' class="btn btn-primary" value={{product.id}} name='addItem'>Clear Cart</button>
+    <p>Your Total: ${{total}}</p>
+    <form method='POST' action='/cart?_method=DELETE'>
+      <button type='submit' class="btn btn-danger">Clear Cart</button>
     </form>
-    <form method='POST' action='./../cart/add'>
-      <button type='submit'>Checkout</button>
+    <form method='POST' action='/checkout'>
+      <button type='submit' class="btn btn-success">Checkout</button>
     </form>
   </div>
 
