--- a/views/products/show.handlebars
+++ b/views/products/show.handlebars
@@ -1,22 +1,29 @@
 <div class="col-xs-12">
-  <img class='largeImg' src='./../../{{product.img}}'>
+  <img class='largeImg' src='/{{product.img}}'>
 </div>
 <div class="col-xs-12">
-  <h3>${{product.price}}</h3>
-  <h3><a href="/products/show/{{product.id}}">{{product.name}}</a></h3>
-  <h5>{{product.description}}</h5>
-  <button style="margin-bottom: 100px;" class="btn btn-primary">Add to Cart</button>
+  <form method='POST' action='/cart/add'>
+    <div class="col-xs-4">
+      <h3>${{product.price}}</h3>
+      <h3><a href="/products/show/{{product.id}}">{{product.name}}</a></h3>
+      <h5>{{product.description}}</h5>
+      <button type='submit' class="btn btn-primary" value={{product.id}} name='addItem'>Add to Cart</button>
+    </div>
+  </form>
 </div>
-
-<h3>Related Products</h3>
-<div class="panel-body">
+<div class="panel panel-primary">
+  <div class='panel-heading'>Related Products</div>
+  <div class="panel-body">
   {{#each products as |product|}}
-  <div style="height: 600px; border: 1px solid black;" class="col-xs-4">
-    <img src='./../../{{product.img}}' class='smallImg'>
-    <h3>${{product.price}}</h3>
-    <h3><a href="/products/show/{{product.id}}">{{product.name}}</a></h3>
-    <h5>{{product.description}}</h5>
-    <button class="btn btn-primary">Add to Cart</button>
-  </div>
+    <form method='POST' action='/cart/add'>
+      <div class="col-xs-4">
+        <img src='/{{product.img}}' class='smallImg'>
+        <h3>${{product.price}}</h3>
+        <h3><a href="/products/show/{{product.id}}">{{product.name}}</a></h3>
+        <h5>{{product.description}}</h5>
+        <button type='submit' class="btn btn-primary" value={{product.id}} name='addItem'>Add to Cart</button>
+      </div>
+    </form>
   {{/each}}
+  </div>
 </div>
