--- a/views/checkout.handlebars
+++ b/views/checkout.handlebars
@@ -63,12 +63,20 @@
 
 			<div class="row">
 				<div class="col-xs-4 col-xs-offset-2">
-					<button class="btn btn-danger">Return to Cart</button>
-				</div>
-				<div class="col-xs-4">
 					<button class="btn btn-primary">Submit Payment</button>
+				</div>
+				<script
+			    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+			    data-key="{{ STRIPE_PK }}"
+			    data-amount="100"
+			    data-name="Stripe Node Test"
+			    data-description="Widget"
+			    data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+			    data-locale="auto"></script>
+				</form>
+				<div class="col-xs-4">
+					<button class="btn btn-danger">Return to Cart</button>
 				</div>
 			</div>
 		</div>
-	</form>
 </div>
