checkout view working - no stripe yet

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -33,7 +33,7 @@
   <div class='row'>
     <h2>Total: {{total}}</h2>
     <a href='/cart/deleteCart'><button class='btn btn-danger'>Clear Cart</button></a>
-    <button class='btn btn-primary'>Checkout</button>
+    <a href='/checkout'><button class='btn btn-primary'>Checkout</button></a>
   </div>
 
 </div>
