some bugs, but cart functionality complete

--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -41,15 +41,27 @@
   <!-- SHOW ALL PRODUCTS -->
   <div class="panel-body">
     {{#each products as |product|}}
-    <form method='POST' action='/cart/add'>
-      <div class="col-xs-4">
-        <img src='/{{product.img}}' class='smallImg'>
-        <h3>${{product.price}}</h3>
-        <h3><a href="/products/show/{{product.id}}">{{product.name}}</a></h3>
-        <h5>{{product.description}}</h5>
-        <button type='submit' class="btn btn-primary" value={{product.id}} name='addItem'>Add to Cart</button>
-      </div>
-    </form>
+      {{#if product.isInCart}}
+      <form method='POST' action='/cart/add'>
+        <div class="col-xs-4">
+          <img src='/{{product.img}}' class='smallImg'>
+          <h3>${{product.price}}</h3>
+          <h3><a href="/products/show/{{product.id}}">{{product.name}}</a></h3>
+          <h5>{{product.description}}</h5>
+          <button type='submit' class="btn btn-info" value={{product.id}} name='addItem'>Edit Cart</button>
+        </div>
+      </form>
+      {{else}}
+      <form method='POST' action='/cart/add'>
+        <div class="col-xs-4">
+          <img src='/{{product.img}}' class='smallImg'>
+          <h3>${{product.price}}</h3>
+          <h3><a href="/products/show/{{product.id}}">{{product.name}}</a></h3>
+          <h5>{{product.description}}</h5>
+          <button type='submit' class="btn btn-success" value={{product.id}} name='addItem'>Add to Cart</button>
+        </div>
+      </form>
+      {{/if}}
     {{/each}}
   </div>
 
