--- a/views/categories/single.handlebars
+++ b/views/categories/single.handlebars
@@ -1,6 +1,6 @@
 <header class="page-header">
   <h1>{{ category.name }}</h1>
-  Items: {{ category.Products.length }}</a>
+  Items: {{ category.Products.length }}
 </header>
 
 {{#if category.Products}}
