--- a/views/shared/_addCart.handlebars
+++ b/views/shared/_addCart.handlebars
@@ -1,7 +1,7 @@
-<form class="form-inline" action="{{ addProductPath product.id }}">
+<form class="form-inline" method="post" action="{{ newCartPath product.id }}">
   <section class="form-group">
-    <label for="number">{{ product.prettyPrice }}</label>
-    <input type="number" step="1" min="0" max="99" value="1" class="form-control" name="number">
+    <label for="count">{{ product.prettyPrice }}</label>
+    <input type="number" step="1" min="0" max="99" value="1" class="form-control" name="count">
   </section>
   <button class="btn btn-primary">Add to Cart</button>
 </form>
