--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -22,18 +22,17 @@
       <ul class="nav navbar-nav">
         <li><a href="{{ productsPath }}">Products</a></li>
         <li><a href="{{ categoriesPath }}">Categories</a></li>
+        <li><a href="{{ cartPath }}">View Cart</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Shopping Cart <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ cartProducts.length }} Poducts <span class="caret"></span></a>
           <ul class="dropdown-menu">
+            <li><a href="{{ checkoutPath }}">Check Out</a></li>
+            <li role="separator" class="divider"></li>
             {{#each cartProducts as |product| }}
             <li><a href="{{ productPath product.id }}">{{ product.count }} {{ product.name }}</a></li>
-            {{/each}} {{!-- cart items --}}
-            <li role="separator" class="divider"></li>
-            <li><a href="{{ cartPath }}">View Cart</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="{{ checkoutPath }}">Check Out</a></li>
+            {{/each}}
           </ul>
         </li>
       </ul>
