--- a/views/shared/_product.handlebars
+++ b/views/shared/_product.handlebars
@@ -8,7 +8,8 @@
       </a>
     </header>
     <section class="panel-body">
-      <p><a href="{{ categoryPath product.Category.id }}">Added to {{ product.Category.name }} on {{ product.prettyDate }}</a></p>
+      <p><a href="{{ categoryPath product.Category.id }}">{{ product.Category.name }}</a></p>
+      <p>Added on {{ product.prettyDate }}</p>
       {{> shared/_addCart product=product }}
   </article>
 </div>
